--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,66 +1,33 @@
-body {color: grey;
-  font-size: 25px;
-  height: 100%;
-}
 
-body { color: grey;
-  font-size: 25px;
-  text-align: center;
-  background-image: url("../images/bg.jpg");
-}
+body { color: grey;font-size: 25px;text-align: center; background-image: url("../images/bg.jpg"); height: 100%;}
 
-#wrapper {
-  width: 960px;
-  height: 95%;
-  box-sizing: border-box;
-  margin: 2.5% auto;
-  background-color: transparent;
-}
+#wrapper {width: 960px; height: 95%; box-sizing: border-box; margin: 2.5% auto; background-color: transparent;}
 
-#sub-wrapper {color: grey;
-  font-size: 25px;
-  position: relative;
-  top: 15%;
-}
+#sub-wrapper { position: relative;top: 15%;height: 70px;}
 
-button {
-  display: block;
-  width: 50%;
-  height: 20%;
-  margin: 0 auto;
-  font-size: 42px;
-  cursor: pointer;
-  background: transparent;
-  border: 0;
-}
+#button {font-size: 20px; cursor: pointer; color: #e91e63;}
 
-img {
-  height: 200px;
-}
+button {display: block;width: 50%;height: 20%;margin: 0 auto;font-size: 42px;cursor: pointer;background: transparent;
+       border: 0;}
 
-h1 {color: grey;
-  font-size: 25px;
-  padding-top: 2.5%;
-  font-family: Geo, sans-serif;
-  font-size: 1.5em;
-  font-weight: bold;
-  color: blue;
-}
+img {height: 200px; }
+audio {display:none;}
 
-h2 {color: #e91e63;
-  font-size: 25px;
-  margin-bottom: 25px;
-  font-size: 35px;
-}
+h2 {color: #e91e63;font-size: 25px;margin-bottom: 25px;font-size: 35px;}
 
-h3 {
-  margin-bottom: 10px;
-  font-size: 25px;
-}
-button:hover {
-  background: yellow;
-  /*border: 2px solid blue;*/
-}
-.jumbotron{
-  opacity: 0.7;
+
+h3 {margin-bottom: 10px;font-size: 25px;}
+
+.jumbotron{opacity: 0.7; border-radius: 5.3rem; margin-top: 20px;}
+
+h4, h4:hover,#button:hover, h4:focus, h4:active{
+  font-size:2em; color: #FFFFFF; font-size:2em;
+  font-family:Arial;
+  -webkit-stroke-width: 3.3px; -webkit-stroke-color: #FFFFFF;
+  -webkit-fill-color: #FFFFFF;
+  text-shadow: 1px 0px 20px yellow;
+  -webkit-transition: width 0.3s; /*Safari & Chrome*/
+  transition: width 0.3s;
+  -moz-transition: width 0.3s; /* Firefox 4 */
+  -o-transition: width 0.3s; /* Opera */
 }
