--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,8 @@ body { color: grey;font-size: 25px;text-align: center; background-image: url("..
 button {display: block;width: 50%;height: 20%;margin: 0 auto;font-size: 42px;cursor: pointer;background: transparent;
        border: 0;}
 
+#title{height: 100px;}
+
 img {height: 200px; }
 audio {display:none;}
 
