--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,17 @@
 
-body { color: grey;font-size: 25px;text-align: center; background-image: url("../images/bg.jpg"); height: 100%;}
+body {position: relative; color: grey;font-size: 25px;text-align: center; background-image: url("../images/bg.jpg"); height: 100%;}
 
 #wrapper {width: 960px; height: 95%; box-sizing: border-box; margin: 2.5% auto; background-color: transparent;}
 
-#sub-wrapper { position: relative;top: 15%;height: 70px;}
+#sub-wrapper { top: 15%;height: 70px;}
 
-#button {font-size: 20px; cursor: pointer; color: #e91e63;}
+#button {font-size: 25px;font-weight: bold; cursor: pointer; color: #e91e63;}
 
 button {display: block;width: 50%;height: 20%;margin: 0 auto;font-size: 42px;cursor: pointer;background: transparent;
        border: 0;}
 
 #title{height: 100px;}
+#now{position: absolute; margin-top: 0px;margin-left: -590px; width: 150px;height: 150px; opacity: 1; }
 
 img {height: 200px; }
 audio {display:none;}
