--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {position: relative; color: grey;font-size: 25px;text-align: center; backgr
 
 #sub-wrapper { top: 15%;height: 70px;}
 
-#button {font-size: 25px;font-weight: bold; cursor: pointer; color: #e91e63;}
+#button {font-size: 25px;font-weight: bold; cursor: pointer; color:#112bea;}
 
 button {display: block;width: 50%;height: 20%;margin: 0 auto;font-size: 42px;cursor: pointer;background: transparent;
        border: 0;}
@@ -16,15 +16,14 @@ button {display: block;width: 50%;height: 20%;margin: 0 auto;font-size: 42px;cur
 img {height: 200px; }
 audio {display:none;}
 
-h2 {color: #e91e63;font-size: 25px;margin-bottom: 25px;font-size: 35px;}
+h2 {color: #112bea;font-size: 25px;margin-bottom: 25px;font-size: 35px;}
 
-
+#start{font-size:1.5em;font-weight: bolder;}
 h3 {margin-bottom: 10px;font-size: 25px;}
+.jumbotron{opacity: 0.9; border-radius: 5.3rem; margin-top: 20px; color: blue;}
 
-.jumbotron{opacity: 0.7; border-radius: 5.3rem; margin-top: 20px;}
-
-h4, h4:hover,#button:hover, h4:focus, h4:active{
-  font-size:2em; color: #FFFFFF; font-size:2em;
+p,h4, h4:hover,#button:hover, h4:focus, h4:active{
+  font-size:1.5em; color: #FFFFFF; 
   font-family:Arial;
   -webkit-stroke-width: 3.3px; -webkit-stroke-color: #FFFFFF;
   -webkit-fill-color: #FFFFFF;
