--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ h2 {color: #112bea;font-size: 25px;margin-bottom: 25px;font-size: 35px;}
 
 #start{font-size:1.5em;font-weight: bolder;}
 h3 {margin-bottom: 10px;font-size: 25px;}
-.jumbotron{opacity: 0.9; border-radius: 5.3rem; margin-top: 20px; color: blue;}
+.jumbotron{ border-radius: 5.3rem; margin-top: 20px; color: blue;}
 
 p,h4, h4:hover,#button:hover, h4:focus, h4:active{
   font-size:1.5em; color: #FFFFFF; 
