--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,9 @@ body {position: relative; color: grey;font-size: 25px;text-align: center; backgr
 button {display: block;width: 50%;height: 20%;margin: 0 auto;font-size: 42px;cursor: pointer;background: transparent;
        border: 0;}
 
-#title{height: 100px;}
-#now{position: absolute; margin-top: 0px;margin-left: -590px; width: 150px;height: 150px; opacity: 1; }
+#title{height: 110px;}
+
+#btn{ width: 100px; }
 
 img {height: 200px; }
 audio {display:none;}
