--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,12 @@ body {position: relative; color: grey;font-size: 25px;text-align: center; backgr
 
 #sub-wrapper { top: 15%;height: 70px;}
 
-#button {font-size: 25px;font-weight: bold; cursor: pointer; color:#112bea;}
+#button {font-size: 20px;font-weight: bold; cursor: pointer; color:#112bea;width: 300px;margin: 15px;}
+#button:hover{font-size: 25px;font-weight: bolder; cursor: pointer; color:#FFFFFF;}
 
 button {display: block;width: 50%;height: 20%;margin: 0 auto;font-size: 42px;cursor: pointer;background: transparent;
        border: 0;}
-
+#now{position:absolute;margin-left: 16%;width: 150px;height:auto;margin-top: -144px;opacity:0.9;}
 #title{height: 110px;}
 
 #btn{ width: 100px; }
@@ -19,11 +20,11 @@ audio {display:none;}
 
 h2 {color: #112bea;font-size: 25px;margin-bottom: 25px;font-size: 35px;}
 
-#start{font-size:1.5em;font-weight: bolder;}
+#start,#start-over {font-size:1.5em;font-weight: bolder;}
 h3 {margin-bottom: 10px;font-size: 25px;}
 .jumbotron{ border-radius: 5.3rem; margin-top: 20px; color: blue;}
 
-p,h4, h4:hover,#button:hover, h4:focus, h4:active{
+p,h4, h4:hover, h4:focus, h4:active{
   font-size:1.5em; color: #FFFFFF; 
   font-family:Arial;
   -webkit-stroke-width: 3.3px; -webkit-stroke-color: #FFFFFF;
